# pretix-newsletter-manual

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_newsletter_manual/: __init__.py  apps.py  exporters.py  models.py  signals.py  urls.py  views.py
pretix_newsletter_manual/locale/: django.pot
pretix_newsletter_manual/locale/de/LC_MESSAGES/: django.po
pretix_newsletter_manual/locale/de_Informal/LC_MESSAGES/: django.po
pretix_newsletter_manual/migrations/: 0001_initial.py
pretix_newsletter_manual/templates/pretix_newsletter_manual/: settings.html
